about section created

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit repudiandae explicabo, quod nulla magni laudantium neque </p>
+                <p class="banner description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit repudiandae explicabo, quod nulla magni laudantium neque </p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contract</button>
             </div>
@@ -33,6 +33,9 @@
 
     </header>
     <main>
+        <section class="about"></section>
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi temporibus inventore provident esse debitis quae incidunt culpa modi eos nostrum laudantium, nemo, fugiat error omnis reprehenderit beatae rem est ad!</p>
 
     </main>
     <footer>
