--- a/index.html
+++ b/index.html
@@ -35,7 +35,31 @@
     <main>
         <section class="about"></section>
         <h3 class="section-title">About Me</h3>
-        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi temporibus inventore provident esse debitis quae incidunt culpa modi eos nostrum laudantium, nemo, fugiat error omnis reprehenderit beatae rem est ad!</p>
+        <p class="section-description">Meet our web design maestro, seamlessly blending creativity and code to craft visually stunning and user-centric websites. With an eye for detail and a passion for innovation, our designer transforms ideas into captivating online experiences. Elevate your digital presence with a touch of artistic finesse and technical brilliance."
+
+
+
+
+
+        </p>
+        <div class="about-info-container">
+            <div class="about-info">
+                <h4 class="info-title">Name:</h4>
+                <p class="info-description">Mary Hardy</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">Email:</h4>
+                <p class="info-description">info@gmail.com</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">Date of Birth:</h4>
+                <p class="info-description">11 November 1987</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">From:</h4>
+                <p class="info-description">USA</p>
+            </div>
+        </div>
 
     </main>
     <footer>
