--- a/index.html
+++ b/index.html
@@ -215,6 +215,12 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">Let’s Message me</h3>
+            <form action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" name="" placeholder="Your Email" id="">
+                <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                <input class="btn-primary"type= "submit" value="Submit">
+            </form>
             <p class="section description">Please fill out the form on this section to contact with me or call between
                 9:00 A.M and 8.00 P.M ET, Monday through Friday
             </p>
